Fix alignment issues

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,11 @@
 $primary-colour: #c402d1;
 
+body.page-template-scorecard, body.page-template-results {
+    background-color: #000005;
+}
+
 .page-template-scorecard, .page-template-results {
+
     
     header, footer {
         display: none;
@@ -18,8 +23,10 @@ $primary-colour: #c402d1;
 
         .single-winner {
             display: flex;
-            align-items: center;
             margin-bottom: 10px;
+            align-items: center;
+            align-content: center;
+            flex-wrap: wrap;
 
             &:last-child {
                 margin-bottom: 0;
@@ -49,23 +56,26 @@ $primary-colour: #c402d1;
             }
 
             .winner-info {
+                font-family: "Helvegan - Inky", Helvetica, Arial, Lucida, sans-serif;
+                font-size: 25px;
+                display: flex;
+                align-items: center;
+
+                span {
+                    background: white;
+                    border-radius: 100%;
+                    color: black;
+                    display: inline-block;
+                    font-weight: bold;
+                    margin-right: 10px;
+                    text-align: center;
+                    width: 35px;
+                    height: 35px;
+                    line-height: 35px;
+                }
 
                 p {
-                    font-family: "Helvegan - Inky", Helvetica, Arial, Lucida, sans-serif;
-                    font-size: 25px;
-
-                    span {
-                        background: white;
-                        border-radius: 100%;
-                        color: black;
-                        display: inline-block;
-                        font-weight: bold;
-                        margin-right: 10px;
-                        text-align: center;
-                        width: 35px;
-                        height: 35px;
-                        line-height: 35px;
-                    }
+                    font-size: 20px;
                 }
 
             }
@@ -74,12 +84,7 @@ $primary-colour: #c402d1;
 
     #scorecard-section {
         background: url(http://oneunder.co.uk/wp-content/uploads/2023/02/bg.png);
-        // background: url(/wp-content/plugins/mini-golf-digital-scorecards/src/images/bg.png);
         background-size: cover;
-        // background-position: center;
-        // background-color: rgb(0 0 0 / 75%);
-        // background-blend-mode: darken;
-        height: 100vh;
         padding: 20px;
 
         .header-logo {
@@ -274,7 +279,7 @@ $primary-colour: #c402d1;
                     .heading {
                         color: white;
                         border-bottom: 2px solid white;
-                        padding: 15px;
+                        padding: 10px;
                         cursor: pointer;
                         font-size: 15px; 
                     }
@@ -291,7 +296,7 @@ $primary-colour: #c402d1;
                         float: right;
                         transform: rotate(0);
                         transition: all 0.5s;
-                        margin-top: 5px;
+                        margin-top: 7px;
                     }
                     .active.heading::before {
                         transform: rotate(-180deg);
@@ -302,7 +307,7 @@ $primary-colour: #c402d1;
                     .contents {
                         display: none;
                         border-bottom: 2px solid white;
-                        padding: 15px;
+                        padding: 10px;
                         color: white;
                         font-size: 13px;
                         line-height: 1.5;
@@ -390,6 +395,8 @@ $primary-colour: #c402d1;
                 max-width: 270px;
                 padding: 10px 0;
                 position: relative;
+                display: flex;
+                justify-content: space-between;
                 
                 button {
                     background-color: #e9a2c0;
